--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -4,13 +4,33 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sexual Profiles</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
       font-family: 'Montserrat', sans-serif;
-      background-color: #064D95;
     }
+
+    .border-wrapper {
+      background: linear-gradient(to bottom, #06954E, #064D95), linear-gradient(to right, #06954E, #064D95);
+      background-blend-mode: screen;
+      padding: 5px 15px 15px;
+    }
+
+    .content-container {
+      background-color: #950606;
+      border-radius: 25px;
+      margin: auto;
+      max-width: 700px;
+    }
+
+    .room-section {
+      padding: 40px 20px 0;
+    }
+
+    .red-room { background-color: #950606; }
+    .green-room { background-color: #06954E; }
+    .blue-room { background-color: #064D95; }
 
     .logo {
       display: block;
@@ -27,8 +47,8 @@
       font-style: italic;
       font-weight: 700;
       color: white;
-      text-shadow: 0 0 8px #72c7ff, 0 0 12px #72c7ff;
-      margin: 0px 0 5px;
+      text-shadow: 0 0 8px #ff00ff, 0 0 12px #ff00ff;
+      margin: 10px 0 5px;
     }
 
     .find-type-btn {
@@ -52,17 +72,9 @@
       transform: scale(1.05);
     }
 
-    .blue-btn a { background-color: #064D95; }
-    .green-btn a { background-color: #06954E; }
     .red-btn a { background-color: #950606; }
-
-    .room-section {
-      padding: 40px 20px;
-    }
-
-    .blue-room { background-color: #064D95; }
-    .green-room { background-color: #06954E; }
-    .red-room { background-color: #950606; }
+    .green-btn a { background-color: #06954E; }
+    .blue-btn a { background-color: #064D95; }
 
     .archetype-card {
       margin: 40px auto;
@@ -71,7 +83,7 @@
     }
 
     .image-container {
-      border: 4px solid gold;
+      border: 4px solid #DEC084;
       border-radius: 12px;
       overflow: hidden;
       display: inline-block;
@@ -92,7 +104,7 @@
 
     .divider {
       width: 4px;
-      background-color: gold;
+      background-color: #DEC084;
     }
 
     .slogan {
@@ -108,7 +120,7 @@
     }
 
     h3 a {
-      color: gold;
+      color: #DEC084;
       text-decoration: none;
       font-size: 1.4rem;
     }
@@ -119,176 +131,183 @@
   </style>
 </head>
 <body>
+  <div class="border-wrapper">
+    <img src="golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
 
-<img src="golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
+    <div class="content-container">
 
-<div class="blue-room room-section">
-  <div class="page-title">
-    <h1>Sexual Profiles</h1>
-  </div>
-  <div class="find-type-btn blue-btn">
-    <a href="index.html">Find Your Type</a>
-  </div>
+      <!-- RED ROOM -->
+      <div class="red-room room-section">
+        <div class="page-title">
+          <h1>Sexual Profiles</h1>
+        </div>
+        <div class="find-type-btn red-btn">
+          <a href="index.html">Find Your Type</a>
+        </div>
 
-  <!-- Blue Room Archetypes: submissive → role switch → mood switch → dominant -->
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <img src="images/devoted_darling_female.jpg">
-        <div class="divider"></div>
-        <img src="images/devoted_darling_male.jpg">
+        <!-- Red Room Archetypes -->
+        <div class="archetype-card">
+          <div class="image-container">
+            <div class="image-pair">
+              <img src="images/claimed__trained_female.jpg">
+              <div class="divider"></div>
+              <img src="images/claimed__trained_male.jpg">
+            </div>
+          </div>
+          <h3><a href="claimed-and-trained.html">Claimed & Trained</a></h3>
+          <p class="slogan">The deeper you give in the more pleasure you'll feel.</p>
+        </div>
+
+        <div class="archetype-card">
+          <div class="image-container">
+            <div class="image-pair">
+              <img src="images/the_punish_me_female.jpg">
+              <div class="divider"></div>
+              <img src="images/the_punish_me_male.jpg">
+            </div>
+          </div>
+          <h3><a href="the-punish-me.html">The Punish Me</a></h3>
+          <p class="slogan">What you call defiance, I call foreplay.</p>
+        </div>
+
+        <div class="archetype-card">
+          <div class="image-container">
+            <div class="image-pair">
+              <img src="images/the_provoker_female.jpg">
+              <div class="divider"></div>
+              <img src="images/the_provoker_male.jpg">
+            </div>
+          </div>
+          <h3><a href="the-provoker.html">The Provoker</a></h3>
+          <p class="slogan">You press buttons—on purpose.</p>
+        </div>
+
+        <div class="archetype-card">
+          <div class="image-container">
+            <div class="image-pair">
+              <img src="images/dungeon_master_female.jpg">
+              <div class="divider"></div>
+              <img src="images/dungeon_master_male.jpg">
+            </div>
+          </div>
+          <h3><a href="dungeon-master.html">Dungeon Master</a></h3>
+          <p class="slogan">You’re not just having a fantasy. You’re the one in charge of it.</p>
+        </div>
       </div>
-    </div>
-    <h3><a href="devoted-darling.html">Devoted Darling</a></h3>
-    <p class="slogan">Nothing is as kinky as loyalty.</p>
-  </div>
 
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <img src="images/tender_protector_female.jpg">
-        <div class="divider"></div>
-        <img src="images/tender_protector_male.jpg">
+      <!-- GREEN ROOM -->
+      <div class="green-room room-section">
+        <div class="find-type-btn green-btn">
+          <a href="index.html">Find Your Type</a>
+        </div>
+
+        <!-- Green Room Archetypes -->
+        <div class="archetype-card">
+          <div class="image-container">
+            <div class="image-pair">
+              <img src="images/generous_giver_female.jpg">
+              <div class="divider"></div>
+              <img src="images/generous_giver_male.jpg">
+            </div>
+          </div>
+          <h3><a href="generous-giver.html">Generous Giver</a></h3>
+          <p class="slogan">You have so much to give, you just need someone to give it to.</p>
+        </div>
+
+        <div class="archetype-card">
+          <div class="image-container">
+            <div class="image-pair">
+              <img src="images/bedroom_adventurer_female.jpg">
+              <div class="divider"></div>
+              <img src="images/bedroom_adventurer_male.jpg">
+            </div>
+          </div>
+          <h3><a href="bedroom-adventurer.html">Bedroom Adventurer</a></h3>
+          <p class="slogan">I'm up for anything and down to get dirty.</p>
+        </div>
+
+        <div class="archetype-card">
+          <div class="image-container">
+            <div class="image-pair">
+              <img src="images/promiscuous_plaything_female.jpg">
+              <div class="divider"></div>
+              <img src="images/promiscuous_plaything_male.jpg">
+            </div>
+          </div>
+          <h3><a href="promiscuous-plaything.html">Promiscuous Plaything</a></h3>
+          <p class="slogan">Are you ready for a wild ride!</p>
+        </div>
+
+        <div class="archetype-card">
+          <div class="image-container">
+            <div class="image-pair">
+              <img src="images/charmer_in_charge_female.jpg">
+              <div class="divider"></div>
+              <img src="images/charmer_in_charge_male.jpg">
+            </div>
+          </div>
+          <h3><a href="charmer-in-charge.html">Charmer in Charge</a></h3>
+          <p class="slogan">You don’t just take control. You make them beg for it.</p>
+        </div>
       </div>
-    </div>
-    <h3><a href="tender-protector.html">Tender Protector</a></h3>
-    <p class="slogan">You lead with gravity, not volume.</p>
-  </div>
 
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <img src="images/mood_multiplier_female.jpg">
-        <div class="divider"></div>
-        <img src="images/mood_multiplier_male.jpg">
+      <!-- BLUE ROOM -->
+      <div class="blue-room room-section">
+        <div class="find-type-btn blue-btn">
+          <a href="index.html">Find Your Type</a>
+        </div>
+
+        <!-- Blue Room Archetypes -->
+        <div class="archetype-card">
+          <div class="image-container">
+            <div class="image-pair">
+              <img src="images/devoted_darling_female.jpg">
+              <div class="divider"></div>
+              <img src="images/devoted_darling_male.jpg">
+            </div>
+          </div>
+          <h3><a href="devoted-darling.html">Devoted Darling</a></h3>
+          <p class="slogan">Nothing is as kinky as loyalty.</p>
+        </div>
+
+        <div class="archetype-card">
+          <div class="image-container">
+            <div class="image-pair">
+              <img src="images/tender_protector_female.jpg">
+              <div class="divider"></div>
+              <img src="images/tender_protector_male.jpg">
+            </div>
+          </div>
+          <h3><a href="tender-protector.html">Tender Protector</a></h3>
+          <p class="slogan">You lead with gravity, not volume.</p>
+        </div>
+
+        <div class="archetype-card">
+          <div class="image-container">
+            <div class="image-pair">
+              <img src="images/mood_multiplier_female.jpg">
+              <div class="divider"></div>
+              <img src="images/mood_multiplier_male.jpg">
+            </div>
+          </div>
+          <h3><a href="mood-multiplier.html">Mood Multiplier</a></h3>
+          <p class="slogan">You match their vibe—and raise it.</p>
+        </div>
+
+        <div class="archetype-card">
+          <div class="image-container">
+            <div class="image-pair">
+              <img src="images/heatwave_female.jpg">
+              <div class="divider"></div>
+              <img src="images/heatwave_male.jpg">
+            </div>
+          </div>
+          <h3><a href="heatwave.html">Heatwave</a></h3>
+          <p class="slogan">There's no need to change who you are, because people will adjust to you.</p>
+        </div>
       </div>
+
     </div>
-    <h3><a href="mood-multiplier.html">Mood Multiplier</a></h3>
-    <p class="slogan">You match their vibe—and raise it.</p>
   </div>
-
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <img src="images/heatwave_female.jpg">
-        <div class="divider"></div>
-        <img src="images/heatwave_male.jpg">
-      </div>
-    </div>
-    <h3><a href="heatwave.html">Heatwave</a></h3>
-    <p class="slogan">There's no need to change who you are, because people will adjust to you.</p>
-  </div>
-</div>
-
-<div class="green-room room-section">
-  <div class="find-type-btn green-btn">
-    <a href="index.html">Find Your Type</a>
-  </div>
-
-  <!-- Green Room Archetypes: submissive → role switch → mood switch → dominant -->
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <img src="images/generous_giver_female.jpg">
-        <div class="divider"></div>
-        <img src="images/generous_giver_male.jpg">
-      </div>
-    </div>
-    <h3><a href="generous-giver.html">Generous Giver</a></h3>
-    <p class="slogan">You have so much to give, you just need someone to give it to.</p>
-  </div>
-
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <img src="images/bedroom_adventurer_female.jpg">
-        <div class="divider"></div>
-        <img src="images/bedroom_adventurer_male.jpg">
-      </div>
-    </div>
-    <h3><a href="bedroom-adventurer.html">Bedroom Adventurer</a></h3>
-    <p class="slogan">I'm up for anything and down to get dirty.</p>
-  </div>
-
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <img src="images/promiscuous_plaything_female.jpg">
-        <div class="divider"></div>
-        <img src="images/promiscuous_plaything_male.jpg">
-      </div>
-    </div>
-    <h3><a href="promiscuous-plaything.html">Promiscuous Plaything</a></h3>
-    <p class="slogan">Are you ready for a wild ride!</p>
-  </div>
-
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <img src="images/charmer_in_charge_female.jpg">
-        <div class="divider"></div>
-        <img src="images/charmer_in_charge_male.jpg">
-      </div>
-    </div>
-    <h3><a href="charmer-in-charge.html">Charmer in Charge</a></h3>
-    <p class="slogan">You don’t just take control. You make them beg for it.</p>
-  </div>
-</div>
-
-<div class="red-room room-section">
-  <div class="find-type-btn red-btn">
-    <a href="index.html">Find Your Type</a>
-  </div>
-
-  <!-- Red Room Archetypes: submissive → role switch → mood switch → dominant -->
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <img src="images/claimed__trained_female.jpg">
-        <div class="divider"></div>
-        <img src="images/claimed__trained_male.jpg">
-      </div>
-    </div>
-    <h3><a href="claimed-and-trained.html">Claimed & Trained</a></h3>
-    <p class="slogan">The deeper you give in the more pleasure you'll feel.</p>
-  </div>
-
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <img src="images/the_punish_me_female.jpg">
-        <div class="divider"></div>
-        <img src="images/the_punish_me_male.jpg">
-      </div>
-    </div>
-    <h3><a href="the-punish-me.html">The Punish Me</a></h3>
-    <p class="slogan">What you call defiance, I call foreplay.</p>
-  </div>
-
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <img src="images/the_provoker_female.jpg">
-        <div class="divider"></div>
-        <img src="images/the_provoker_male.jpg">
-      </div>
-    </div>
-    <h3><a href="the-provoker.html">The Provoker</a></h3>
-    <p class="slogan">You press buttons—on purpose.</p>
-  </div>
-
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <img src="images/dungeon_master_female.jpg">
-        <div class="divider"></div>
-        <img src="images/dungeon_master_male.jpg">
-      </div>
-    </div>
-    <h3><a href="dungeon-master.html">Dungeon Master</a></h3>
-    <p class="slogan">You’re not just having a fantasy. You’re the one in charge of it.</p>
-  </div>
-</div>
-
 </body>
 </html>
