--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -9,33 +9,15 @@
     body {
       margin: 0;
       font-family: 'Montserrat', sans-serif;
+      background-color: #000;
     }
-
-  <!-- TOP GRADIENT & LOGO -->
-<div class="border-wrapper" style="padding-top: 5px;">
-  <img src="golden-le-libido-logo.png" alt="Le Libido Logo" class="logo-img" />
-</div>
-
-    .green-room .border-wrapper {
-      background: linear-gradient(to right, #064D95, #950606);
-    }
-
-    .blue-room .border-wrapper {
-      background: linear-gradient(to right, #950606, #06954E);
-    }
-
-<body>
-  <div class="gradient-frame">
-    <!-- your entire page content goes here -->
-  </div>
-</body>
 
     .gradient-frame {
-  padding: 5px 15px 0;
-  background: linear-gradient(to bottom right, #06954E, #064D95, #950606);
-  border-radius: 25px;
-}
-    
+      padding: 5px 15px 0;
+      background: linear-gradient(to bottom right, #06954E, #064D95, #950606);
+      border-radius: 25px;
+    }
+
     .container {
       padding: 20px;
       border-radius: 25px;
@@ -123,6 +105,8 @@
       display: flex;
       height: 240px;
       position: relative;
+      user-select: none;
+      pointer-events: none;
     }
 
     .image-pair img {
@@ -130,6 +114,8 @@
       height: 100%;
       object-fit: cover;
       display: block;
+      pointer-events: none;
+      user-select: none;
     }
 
     .divider {
@@ -162,191 +148,196 @@
   </style>
 </head>
 <body>
+  <div class="gradient-frame">
 
-<!-- TOP GRADIENT & LOGO -->
-<div class="border-wrapper">
-  <img src="golden-le-libido-logo.png" alt="Le Libido Logo" class="logo-img" />
-</div>
-
-<!-- RED ROOM -->
-<div class="red-room">
-  <div class="border-wrapper">
-    <div class="container">
-      <div class="page-title">
-        <h1>Sexual Profiles</h1>
-      </div>
-      <div class="find-type-btn red-btn">
-        <a href="index.html">Find Your Type</a>
-      </div>
-
-      <div class="archetype-card">
-        <div class="image-container">
-          <div class="image-pair">
-            <img src="images/dungeon_master_female.jpg" alt="Dungeon Master - Female">
-            <div class="divider"></div>
-            <img src="images/dungeon_master_male.jpg" alt="Dungeon Master - Male">
-          </div>
+    <!-- Logo + Title Section -->
+    <div class="red-room">
+      <div class="container">
+        <img src="golden-le-libido-logo.png" alt="Le Libido Logo" class="logo-img" />
+        <div class="page-title">
+          <h1>Sexual Profiles</h1>
         </div>
-        <h3><a href="dungeon-master.html">Dungeon Master</a></h3>
-        <p class="slogan">You’re not just having a fantasy. You’re the one in charge of it.</p>
-      </div>
-
-      <div class="archetype-card">
-        <div class="image-container">
-          <div class="image-pair">
-            <img src="images/claimed__trained_female.jpg" alt="Claimed & Trained - Female">
-            <div class="divider"></div>
-            <img src="images/claimed__trained_male.jpg" alt="Claimed & Trained - Male">
-          </div>
+        <div class="find-type-btn red-btn">
+          <a href="index.html">Find Your Type</a>
         </div>
-        <h3><a href="claimed-and-trained.html">Claimed & Trained</a></h3>
-        <p class="slogan">The deeper you give in the more pleasure you'll feel.</p>
-      </div>
 
-      <div class="archetype-card">
-        <div class="image-container">
-          <div class="image-pair">
-            <img src="images/the_provoker_female.jpg" alt="The Provoker - Female">
-            <div class="divider"></div>
-            <img src="images/the_provoker_male.jpg" alt="The Provoker - Male">
+        <!-- RED ROOM ARCHETYPES -->
+        <!-- Dungeon Master -->
+        <div class="archetype-card">
+          <div class="image-container">
+            <div class="image-pair">
+              <img src="images/dungeon_master_female.jpg" alt="Dungeon Master - Female">
+              <div class="divider"></div>
+              <img src="images/dungeon_master_male.jpg" alt="Dungeon Master - Male">
+            </div>
           </div>
+          <h3><a href="dungeon-master.html">Dungeon Master</a></h3>
+          <p class="slogan">You’re not just having a fantasy. You’re the one in charge of it.</p>
         </div>
-        <h3><a href="the-provoker.html">The Provoker</a></h3>
-        <p class="slogan">You press buttons—on purpose.</p>
-      </div>
 
-      <div class="archetype-card">
-        <div class="image-container">
-          <div class="image-pair">
-            <img src="images/the_punish_me_female.jpg" alt="The Punish Me - Female">
-            <div class="divider"></div>
-            <img src="images/the_punish_me_male.jpg" alt="The Punish Me - Male">
+        <!-- Claimed & Trained -->
+        <div class="archetype-card">
+          <div class="image-container">
+            <div class="image-pair">
+              <img src="images/claimed__trained_female.jpg" alt="Claimed & Trained - Female">
+              <div class="divider"></div>
+              <img src="images/claimed__trained_male.jpg" alt="Claimed & Trained - Male">
+            </div>
           </div>
+          <h3><a href="claimed-and-trained.html">Claimed & Trained</a></h3>
+          <p class="slogan">The deeper you give in the more pleasure you'll feel.</p>
         </div>
-        <h3><a href="the-punish-me.html">The Punish Me</a></h3>
-        <p class="slogan">What you call defiance, I call foreplay.</p>
+
+        <!-- The Provoker -->
+        <div class="archetype-card">
+          <div class="image-container">
+            <div class="image-pair">
+              <img src="images/the_provoker_female.jpg" alt="The Provoker - Female">
+              <div class="divider"></div>
+              <img src="images/the_provoker_male.jpg" alt="The Provoker - Male">
+            </div>
+          </div>
+          <h3><a href="the-provoker.html">The Provoker</a></h3>
+          <p class="slogan">You press buttons—on purpose.</p>
+        </div>
+
+        <!-- The Punish Me -->
+        <div class="archetype-card">
+          <div class="image-container">
+            <div class="image-pair">
+              <img src="images/the_punish_me_female.jpg" alt="The Punish Me - Female">
+              <div class="divider"></div>
+              <img src="images/the_punish_me_male.jpg" alt="The Punish Me - Male">
+            </div>
+          </div>
+          <h3><a href="the-punish-me.html">The Punish Me</a></h3>
+          <p class="slogan">What you call defiance, I call foreplay.</p>
+        </div>
       </div>
     </div>
-  </div>
-</div>
 
-<!-- GREEN ROOM -->
-<div class="green-room">
-  <div class="border-wrapper">
-    <div class="container">
-      <div class="find-type-btn green-btn">
-        <a href="index.html">Find Your Type</a>
-      </div>
-
-      <div class="archetype-card">
-        <div class="image-container">
-          <div class="image-pair">
-            <img src="images/charmer_in_charge_female.jpg" alt="Charmer in Charge - Female">
-            <div class="divider"></div>
-            <img src="images/charmer_in_charge_male.jpg" alt="Charmer in Charge - Male">
-          </div>
+    <!-- GREEN ROOM -->
+    <div class="green-room">
+      <div class="container">
+        <div class="find-type-btn green-btn">
+          <a href="index.html">Find Your Type</a>
         </div>
-        <h3><a href="charmer-in-charge.html">Charmer in Charge</a></h3>
-        <p class="slogan">You don’t just take control. You make them beg for it.</p>
-      </div>
 
-      <div class="archetype-card">
-        <div class="image-container">
-          <div class="image-pair">
-            <img src="images/promiscuous_plaything_female.jpg" alt="Promiscuous Plaything - Female">
-            <div class="divider"></div>
-            <img src="images/promiscuous_plaything_male.jpg" alt="Promiscuous Plaything - Male">
+        <!-- Charmer in Charge -->
+        <div class="archetype-card">
+          <div class="image-container">
+            <div class="image-pair">
+              <img src="images/charmer_in_charge_female.jpg" alt="Charmer in Charge - Female">
+              <div class="divider"></div>
+              <img src="images/charmer_in_charge_male.jpg" alt="Charmer in Charge - Male">
+            </div>
           </div>
+          <h3><a href="charmer-in-charge.html">Charmer in Charge</a></h3>
+          <p class="slogan">You don’t just take control. You make them beg for it.</p>
         </div>
-        <h3><a href="promiscuous-plaything.html">Promiscuous Plaything</a></h3>
-        <p class="slogan">Are you ready for a wild ride!</p>
-      </div>
 
-      <div class="archetype-card">
-        <div class="image-container">
-          <div class="image-pair">
-            <img src="images/bedroom_adventurer_female.jpg" alt="Bedroom Adventurer - Female">
-            <div class="divider"></div>
-            <img src="images/bedroom_adventurer_male.jpg" alt="Bedroom Adventurer - Male">
+        <!-- Promiscuous Plaything -->
+        <div class="archetype-card">
+          <div class="image-container">
+            <div class="image-pair">
+              <img src="images/promiscuous_plaything_female.jpg" alt="Promiscuous Plaything - Female">
+              <div class="divider"></div>
+              <img src="images/promiscuous_plaything_male.jpg" alt="Promiscuous Plaything - Male">
+            </div>
           </div>
+          <h3><a href="promiscuous-plaything.html">Promiscuous Plaything</a></h3>
+          <p class="slogan">Are you ready for a wild ride!</p>
         </div>
-        <h3><a href="bedroom-adventurer.html">Bedroom Adventurer</a></h3>
-        <p class="slogan">I'm up for anything and down to get down and dirty.</p>
-      </div>
 
-      <div class="archetype-card">
-        <div class="image-container">
-          <div class="image-pair">
-            <img src="images/generous_giver_female.jpg" alt="Generous Giver - Female">
-            <div class="divider"></div>
-            <img src="images/generous_giver_male.jpg" alt="Generous Giver - Male">
+        <!-- Bedroom Adventurer -->
+        <div class="archetype-card">
+          <div class="image-container">
+            <div class="image-pair">
+              <img src="images/bedroom_adventurer_female.jpg" alt="Bedroom Adventurer - Female">
+              <div class="divider"></div>
+              <img src="images/bedroom_adventurer_male.jpg" alt="Bedroom Adventurer - Male">
+            </div>
           </div>
+          <h3><a href="bedroom-adventurer.html">Bedroom Adventurer</a></h3>
+          <p class="slogan">I'm up for anything and down to get down and dirty.</p>
         </div>
-        <h3><a href="generous-giver.html">Generous Giver</a></h3>
-        <p class="slogan">You have so much to give, you just need someone to give it to.</p>
+
+        <!-- Generous Giver -->
+        <div class="archetype-card">
+          <div class="image-container">
+            <div class="image-pair">
+              <img src="images/generous_giver_female.jpg" alt="Generous Giver - Female">
+              <div class="divider"></div>
+              <img src="images/generous_giver_male.jpg" alt="Generous Giver - Male">
+            </div>
+          </div>
+          <h3><a href="generous-giver.html">Generous Giver</a></h3>
+          <p class="slogan">You have so much to give, you just need someone to give it to.</p>
+        </div>
       </div>
     </div>
-  </div>
-</div>
 
-<!-- BLUE ROOM -->
-<div class="blue-room">
-  <div class="border-wrapper">
-    <div class="container">
-      <div class="find-type-btn blue-btn">
-        <a href="index.html">Find Your Type</a>
-      </div>
-
-      <div class="archetype-card">
-        <div class="image-container">
-          <div class="image-pair">
-            <img src="images/tender_protector_female.jpg" alt="Tender Protector - Female">
-            <div class="divider"></div>
-            <img src="images/tender_protector_male.jpg" alt="Tender Protector - Male">
-          </div>
+    <!-- BLUE ROOM -->
+    <div class="blue-room">
+      <div class="container">
+        <div class="find-type-btn blue-btn">
+          <a href="index.html">Find Your Type</a>
         </div>
-        <h3><a href="tender-protector.html">Tender Protector</a></h3>
-        <p class="slogan">You lead with gravity, not volume.</p>
-      </div>
 
-      <div class="archetype-card">
-        <div class="image-container">
-          <div class="image-pair">
-            <img src="images/devoted_darling_female.jpg" alt="Devoted Darling - Female">
-            <div class="divider"></div>
-            <img src="images/devoted_darling_male.jpg" alt="Devoted Darling - Male">
+        <!-- Tender Protector -->
+        <div class="archetype-card">
+          <div class="image-container">
+            <div class="image-pair">
+              <img src="images/tender_protector_female.jpg" alt="Tender Protector - Female">
+              <div class="divider"></div>
+              <img src="images/tender_protector_male.jpg" alt="Tender Protector - Male">
+            </div>
           </div>
+          <h3><a href="tender-protector.html">Tender Protector</a></h3>
+          <p class="slogan">You lead with gravity, not volume.</p>
         </div>
-        <h3><a href="devoted-darling.html">Devoted Darling</a></h3>
-        <p class="slogan">Nothing is as kinky as loyalty.</p>
-      </div>
 
-      <div class="archetype-card">
-        <div class="image-container">
-          <div class="image-pair">
-            <img src="images/heatwave_female.jpg" alt="Heatwave - Female">
-            <div class="divider"></div>
-            <img src="images/heatwave_male.jpg" alt="Heatwave - Male">
+        <!-- Devoted Darling -->
+        <div class="archetype-card">
+          <div class="image-container">
+            <div class="image-pair">
+              <img src="images/devoted_darling_female.jpg" alt="Devoted Darling - Female">
+              <div class="divider"></div>
+              <img src="images/devoted_darling_male.jpg" alt="Devoted Darling - Male">
+            </div>
           </div>
+          <h3><a href="devoted-darling.html">Devoted Darling</a></h3>
+          <p class="slogan">Nothing is as kinky as loyalty.</p>
         </div>
-        <h3><a href="heatwave.html">Heatwave</a></h3>
-        <p class="slogan">There's no need to change who you are, because people will adjust to you.</p>
-      </div>
 
-      <div class="archetype-card">
-        <div class="image-container">
-          <div class="image-pair">
-            <img src="images/mood_multiplier_female.jpg" alt="Mood Multiplier - Female">
-            <div class="divider"></div>
-            <img src="images/mood_multiplier_male.jpg" alt="Mood Multiplier - Male">
+        <!-- Heatwave -->
+        <div class="archetype-card">
+          <div class="image-container">
+            <div class="image-pair">
+              <img src="images/heatwave_female.jpg" alt="Heatwave - Female">
+              <div class="divider"></div>
+              <img src="images/heatwave_male.jpg" alt="Heatwave - Male">
+            </div>
           </div>
+          <h3><a href="heatwave.html">Heatwave</a></h3>
+          <p class="slogan">There's no need to change who you are, because people will adjust to you.</p>
         </div>
-        <h3><a href="mood-multiplier.html">Mood Multiplier</a></h3>
-        <p class="slogan">You match their vibe—and raise it.</p>
+
+        <!-- Mood Multiplier -->
+        <div class="archetype-card">
+          <div class="image-container">
+            <div class="image-pair">
+              <img src="images/mood_multiplier_female.jpg" alt="Mood Multiplier - Female">
+              <div class="divider"></div>
+              <img src="images/mood_multiplier_male.jpg" alt="Mood Multiplier - Male">
+            </div>
+          </div>
+          <h3><a href="mood-multiplier.html">Mood Multiplier</a></h3>
+          <p class="slogan">You match their vibe—and raise it.</p>
+        </div>
       </div>
     </div>
-  </div>
-</div>
 
+  </div>
 </body>
 </html>
